fix player position on mobile

--- a/src/js/components/Player/PlayerComponent.less
+++ b/src/js/components/Player/PlayerComponent.less
@@ -171,7 +171,7 @@
   }
 
   @media @mobile,@tablet {
-    .player-container {
+    #player-container {
       &:before {
         content: "";
         display: block;
